--- a/styles/pair-programming-z.less
+++ b/styles/pair-programming-z.less
@@ -5,4 +5,31 @@
 @import "ui-variables";
 
 .pair-programming-z {
+
+}
+
+.pair-programming-z_cursor {
+
+}
+
+.blink {
+  animation: pair-programming-z_cursor-animation .8s infinite;
+}
+
+@keyframes pair-programming-z_cursor-animation {
+  0% {
+    visibility: visible;
+  }
+
+  49% {
+    visibility: visible;
+  }
+
+  50% {
+    visibility: hidden;
+  }
+
+  100% {
+    visibility: hidden;
+  }
 }
