--- a/styles/pair-programming-z.less
+++ b/styles/pair-programming-z.less
@@ -9,7 +9,21 @@
 }
 
 .pair-programming-z_cursor {
+  position: relative;
+  width: 2px;
+}
 
+.pair-programming-z_name {
+  display: none;
+  color: #333;
+  font-size: 10px;
+  line-height: 12px;
+  padding: 2px 5px;
+  position: absolute;
+  top: -2px;
+  left: 50%;
+  text-transform: uppercase;
+  transform: translate(-50%, -100%);
 }
 
 .blink {
